--- a/wp-content/themes/rt-portfolio/assets/css/owl.carousel.css
+++ b/wp-content/themes/rt-portfolio/assets/css/owl.carousel.css
@@ -149,7 +149,7 @@
   top: 50%;
   margin-left: -40px;
   margin-top: -40px;
-  background: url("/https://maharishi15.github.io/Maharshi/wp-content/themes/rt-portfolio/assets/css/owl.video.play.png") no-repeat;
+  background: url("http://localhost/https:/maharishi15.github.io/Maharshi/wp-content/themes/rt-portfolio/assets/css/owl.video.play.png") no-repeat;
   cursor: pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
